--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 }
 
 img {
-    width: 550px;
+    width: 400px;
 }
 
 .menu {
     float: left;
+    margin-left: 0px;
     background-color: rgb(56, 55, 55);
 }
 
@@ -39,6 +40,7 @@ ul li:last-child{
 }
 
 .tartalom> img {
-    width: 150px;
+    width: 100px;
     margin: auto;
+    
 }
