--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
-.container {
-    margin: auto;
-    margin-top: 5px;
-    background-color: rgb(255, 255, 255)
+html {
+    margin-top: 0px;
+    background-color: rgb(234, 234, 234);
+    margin-right: 50px;
+    margin-left: 0px;
 }
 
 .menu {
     float: left;
-    background-color: rgb(56, 55, 55);
-    width: 300px;
+    background-color: rgb(67, 67, 67);
+    width: 400px;
 }
 
 .menu > img {
-    width: 300px;
+    width: 400px;
+}
+
+hr{
+    border: 1px inset #505050;
 }
 
 h1 {
@@ -20,7 +25,6 @@ h1 {
 }
 
 ul {
-    /*border: gray 2px solid;*/
     border-radius: 15px;
 
 }
@@ -40,15 +44,41 @@ ul li:last-child{
 }
 
 .tartalom {
-    margin: 50px;
     text-align: center;
+    font-size: 20px;
 }
 
 .golyo{
     width: 100px;
 }
-.szamok{
-    margin-left:5em ;
-    text-align:center;
-    font-size: 20px;
+    
+    /*Érdekes történet css kezdete*/
+.alcim {
+    text-align: left;
+    text-indent: 50px;
+    font-weight: bold;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
 }
+
+.tortenet{
+    text-align: left;
+    position:relative;
+    left: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-style: italic;
+}
+
+.at {
+    text-align: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.leggyh2{
+    font-size: 40px;
+    font-family: arial;
+    font-weight: bold;
+}
+    /*Érdekes történet css vége*/
