--- a/style.css
+++ b/style.css
@@ -70,11 +70,13 @@ ul li:last-child{
     font-style: italic;
 }
 
-.at {
-    text-align: center;
+/* .et {
+    text-align: left;
+    text-indent: 50px;
+    font-weight: bold;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 .leggyh2{
     font-size: 40px;
@@ -82,3 +84,19 @@ ul li:last-child{
     font-weight: bold;
 }
     /*Érdekes történet css vége*/
+
+    /*Leghosszabb kezdete*/
+.alcim1{
+    font-size: 30px;
+    text-align: left;
+    text-indent: 420px;
+}
+    /*Leghosszabb vége*/
+
+    /*Leghasonlóbb kezdete*/
+.alcim2{
+    font-size: 40px;
+    text-align: left;
+    text-indent: 420px;
+}
+    /*Leghasonlóbb vége*/
