legkisebb osszegu szamsorok html , terkoz

--- a/style.css
+++ b/style.css
@@ -100,3 +100,12 @@ ul li:last-child{
     text-indent: 160px;
 }
     /*Leghasonlóbb vége*/
+
+
+    .terkoz{
+        padding-top: 50px;
+    }
+
+    #terkoz{
+        padding-top: 50px;
+    }
